--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <spring-context.version>4.3.0.RELEASE</spring-context.version>
         <jackson-databind.version>2.5.3</jackson-databind.version>
         <jackson-annotations.version>2.7.5</jackson-annotations.version>
         <slf4j-api.version>1.7.21</slf4j-api.version>
@@ -18,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-context.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
